--- a/pokersessions/templates/pokersessions/edit.html
+++ b/pokersessions/templates/pokersessions/edit.html
@@ -31,10 +31,10 @@
               {% endtimezone %}
             </td>
             <td>
-              {{ update.buy_in }}
+              {{ update.buy_in_pretty }}
             </td>
             <td>
-              {{ update.chip_stack }}
+              {{ update.chip_stack_pretty }}
             </td>
             <td>
               {{ update.comment }}
